[tool.poetry]
name = "bioxelnodes"
version = "1.0.4"
description = ""
authors = ["Ma Nan <icrdr2010@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12.dev0"
simpleitk = "2.3.1"
pyometiff = "1.0.0"
mrcfile = "1.5.1"
h5py = "3.11.0"
transforms3d = "0.4.2"

[tool.poetry.group.dev.dependencies]
bpy = "^4.2.0"
pytest = "^8.3.2"
pytest-dependency = "^0.6.0"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.30"
autopep8 = "^2.3.1"
mike = "^2.1.2"
tomlkit = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
