[project]
name = "bioxelnodes"
version = "1.0.8"
description = ""
authors = [{ name = "Ma Nan", email = "icrdr2010@outlook.com" }]
requires-python = ">=3.11.0,<3.12.dev0"
readme = "README.md"
license = "MIT"
dependencies = [
    "simpleitk==2.3.1",
    "pyometiff==1.0.0",
    "mrcfile==1.5.1",
    "h5py==3.11.0",
    "transforms3d==0.4.2",
]

[dependency-groups]
dev = [
    "bpy>=4.2.0,<5",
    "pytest>=8.3.2,<9",
    "pytest-dependency>=0.6.0,<0.7",
    "pytest-cov>=5.0.0,<6",
    "mkdocs>=1.6.0,<2",
    "mkdocs-material>=9.5.30,<10",
    "autopep8>=2.3.1,<3",
    "mike>=2.1.2,<3",
    "tomlkit>=0.13.0,<0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
